@@ -14,7 +14,7 @@ INCLUDES=$(SDK_INC_PATH);.
 
 MSC_WARNING_LEVEL=/W3 /WX
 
-C_DEFINES=$(C_DEFINES) -D_CONSOLE_ -DHAVE_GETADDRINFO -DHAVE_GETNAMEINFO -DSTDC_HEADERS
+C_DEFINES=$(C_DEFINES) -D_CONSOLE_ -DHAVE_STRUCT_SOCKADDR_STORAGE -DHAVE_GETADDRINFO -DHAVE_GETNAMEINFO -DSTDC_HEADERS
 
 SOURCES= \
         ..\netcpu_ntperf.c \
